dalsi upravy frontu, collapse, bugfixy

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -28,26 +28,35 @@
     border-width: 0.15rem;
 }
 
-.add-but, .log-but, .unlog, .det-but, .edit-but, .del-but, .filtr-but{
+.add-but, .log-but, .unlog, .det-but, .edit-but, .del-but, .filtr-but, .blue-but-outline:hover{
     background-color: var(--modra) !important;
-    border: 2px solid var(--modra) !important;
+    border-color: var(--modra) !important;
     color: white !important;
     border-radius: 0.05rem !important;
     font-weight: 600 !important;
 }
-.add-but:hover, .log-but:hover, .unlog:hover, .det-but:hover, .edit-but:hover, .del-but:hover, .filtr-but:hover{
+.add-but:hover, .log-but:hover, .unlog:hover, .det-but:hover, .edit-but:hover, .del-but:hover, .filtr-but:hover, .blue-but-outline{
     background-color: var(--backgrnd) !important;
     color: var(--modra) !important;
     border-color: var(--modra) !important;
+    border-radius: 0.05rem !important;
+    font-weight: 600 !important;
 }
 .add-but{
     margin: 1rem;
 }
 .prehled-tab{ 
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     .row{
-        padding-block: 0.5rem;
         border-bottom: 0.05rem solid rgba(255, 255, 255, .3);
     }
+}
+#reg{
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
 }
 
 .add-form{
@@ -83,5 +92,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center !important;
+}
+
+.collapse{
+    overflow: hidden !important;
 }
 @import "../node_modules/bootstrap/scss/bootstrap";
